[package]
name = "jupuary-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.reqwest]
version = "0.12"
features = ["json"]
[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.serde_json]
version = "1"
[dependencies.anyhow]
version = "1"